minor changes on about me

--- a/index.html
+++ b/index.html
@@ -2,203 +2,7 @@
 <html>
 <head>
 <title>Ong Yi Jun</title>
-<style>
-body {
-	margin: 0px;
-}
-.navigation-bar {
-	padding: 1.6rem 1rem;
-	background-color: #404258;
-	position: fixed;
-	width: 100%;
-	z-index: 2;
-}
-.navigation-bar nav ul {
-	margin: 0px;
-	margin-block: 0px;
-	padding: 0px;
-	padding-inline: 0px;
-}
-.navigation-bar nav ul li {
-	margin: 0rem 1%;
-	display: inline;
-	float: left;
-	height: auto;
-	background-color: #50577A;
-	border-radius: 0.5rem;
-	transition: 0.5s;
-}
-.navigation-bar nav ul li a {
-	display: block;
-	position: translateY(50%);
-	padding: 0.5rem 2rem;
-	text-decoration: none;
-	color: #8087A3;
-	letter-spacing: 0.08rem;
-	font-size: 1.2rem;
-}
-.navigation-bar nav ul li:hover {
-	background-color: #6B728E;
-}
-.navigation-bar nav ul li:hover a {
-	color: #404258;
-}
-.navigation-bar nav a img {
-	float: right;
-	width: 4rem;
-	height: auto;
-	margin: 0rem 2rem;
-	filter: drop-shadow(0.35rem 0.35rem 0.2rem rgba(0, 0, 0, 1));
-}
-
-.basic-info {
-	padding-top: 7rem;
-	display: flex;
-	width: 100%;
-	flex-direction: column;
-	align-items: center;
-	background-color: #6B728E;
-	color: #404258;
-	font-size: 1.2rem;
-}
-.basic-info h1 {
-	font-size: 2.5rem;
-	font-style: normal;
-	font-weight: bold;
-	font-family: "Lucida Handwriting", cursive;
-	color: #404258;
-}
-.basic-info img {
-	border-radius: 1rem;
-}
-.contact {
-	margin-block-start: 0rem;
-}
-.contact a{
-	color: #404258;
-	text-decoration: none;
-}
-
-.about-me {
-	display: flex;
-	align-items: center;
-	padding: 0rem 2rem;
-	background-color: #8087A3;
-}
-.about-me h1 {
-	color: #404258;
-	padding: 0rem 2rem 1rem 2rem;
-	border-bottom: 0.2rem dotted;
-}
-.about-me p {
-	width: 60%;
-	font-size: 1.5rem;
-	text-align: justify;
-	color: #404258;
-}
-.about-me img {
-	height: fit-content;
-	width: 30%;
-}
-.about-me-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.subjects-taken {
-	padding: 2rem 0rem;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	background-color: #6B728E;
-}
-.subjects-taken h1 {
-	padding: 0rem 2rem 1rem 2rem;
-	border-bottom: 0.2rem dotted;
-	color: #404258;
-}
-.subjects-taken table, th, td {
-	border: 0.12rem solid #404258;
-	padding: 0.5rem 1rem;
-}
-.subjects-taken table {
-	width: 60%;
-	border-collapse: collapse;
-}
-.subjects-taken tr:nth-child(2n+1) {
-	background-color: #8087A3;
-	color: #404258;
-}
-.subjects-taken tr:nth-child(2n) {
-	background-color: #404258;
-	color: #8087A3;
-}
-.subjects-taken tr td:first-child {
-	text-align: right;
-}
-.subjects-taken tr td:last-child {
-	text-align: center;
-}
-
-.project{
-	
-	background-size: cover;
-	background-position: center;
-	position: relative;
-	height: 600px;
-}
-.project-1{
-	background-image: url('connect_four.png');
-}
-.project-2{
-	background-image: url('greenhouse.jpg');
-	margin-top: 0px;
-}
-.project-3{
-	background-image: url('rogue_like_game_unity.PNG');
-	margin-top: 0px;
-}
-.project-4{
-	background-image: url('academic-affairs-online-system-source-code.JPG');
-	margin-top: 0px;
-}
-.overlay{
-	position: absolute;
-	min-height: 100%;
-	min-width: 100%;
-	left: 0;
-	top: 0;
-	background: rgba(0, 0, 0, 0.6);
-}
-.description{
-	padding-top: 150px;
-	left:50%;
-	position: absolute;
-	top:45%;
-	transform: translate(-50%,-55%);
-	text-align:center;
-}
-.description h1{
-	background-color: rgba(150, 150, 190, 30%);
-	color:#404258;
-	border-radius: 1.5rem;
-}
-.description p{
-	background-color: rgba(0, 0, 0, 30%);
-	border-radius: 1.5rem;
-	color: #6B728E;
-	font-size: 1.3rem;
-	line-height: 1.5;
-	padding: 0rem 2rem;
-}
-.project-1 .description h1, .project-3 .description h1 {
-	background-color: rgba(100, 100, 100, 30%);
-}
-.project-1 .description p, .project-3 .description p {
-	background-color: rgba(100, 100, 100, 30%);
-}
-</style>
+<link href="./index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 	<header class="navigation-bar">
@@ -226,9 +30,9 @@ body {
 		</p>
 		<p class="contact">
 			Phone: <a href="tel:+60168609059"><i>+60168609059</i></a> <br>
-			Email: <a href="mailto:swe2002109@xmu.edu.my"><i>swe2002109@xmu.edu.my</i></a> <br>
+			Email: <a href="mailto:edmundong1125@gmail.com"><i>edmundong1125@gmail.com</i></a> <br>
 			Github: <a href="https://github.com/oyj623"><i>oyj623</i></a> <br>
-			LinkedIn: <a href="https://www.linkedin.com/in/o-yj-8a2a97255/"><i>oyj</i></a>
+			LinkedIn: <a href="https://www.linkedin.com/in/ong-yi-jun-8a2a97255/"><i>Ong Yi Jun</i></a>
 		</p>
 		
 	</div>
@@ -236,29 +40,32 @@ body {
 	<div class="about-me" id="about-me">
 		<div class="about-me-content">
 			<h1>About me</h1>
+			<p>Greetings, I am Ong Yi Jun. </p>
+ 			<p>
+				I prioritize mental satisfaction over physical world fulfillment, 
+				finding achievement in problem-solving to be my power source. 
+				This is why I am passionate about math and programming.
+			</p>
 			<p>
-				Greetings, I am Ong Yi Jun. 
-				I am a person who prioritize mental satisfaction more than physical world fulfillment. 
-				Therefore, the feeling of achievement after solving a problem is my power source. 
-				This is also the reason why I love math and programming.
 				Furthermore, my <a href="https://www.16personalities.com/free-personality-test">MBTI personality type</a>
-				is <a href="https://www.16personalities.com/intj-personality">INTJ-A</a>. I am 
-				<span style="background: #4298b4;">introverted</span>, 
-				which means I would rather spend time doing things I like 
-				than socializing with people I don't know. 
-				However, it doesn't mean I don't want to work with other people. 
-				It might take some time for me to familiarize with my future colleagues,
-				but I can communicate with them effectively after I get to know them well.
-				I am also a <span style="background:#88619a">judging</span> person, which means I am decisive, thorough and highly organized 
-				in my work, planning and decision-making.
-				My <a href="https://www.16personalities.com/profiles/f86eb82313cd6">personality test result</a>
-				also suggests that I "<span style="background: #33a474">think</span>" more than I "feel", meaning that I prioritize logic over emotions.
-				I focus on objectivity and rationality, and see efficiency more important than my feelings.
-				This makes me suitable for software developments or data analysis job.
-				I tend to be more <span style="background:#e4ae3a">intuitive</span> in the fields that I am good in.
-				However, I will be observant in fields that I am not confident in.
-				Lastly, I am an <span style="background: #f25e62;">assertive</span> person. I am self-assured, even-tempered 
-				and resistant to stress. 
+				is <a href="https://www.16personalities.com/intj-personality">INTJ-A</a>, characterized by 
+				<span style="background: #4298b4;">introversion</span>, 
+				a preference for spending time doing things I enjoy,
+				rather than socializing with strangers.
+				While it may take me some time to get comfortable with new colleagues, 
+				I can communicate effectively once I know them well.
+				I am also a <span style="background:#88619a">judging</span> person, known for being decisive, 
+				thorough and highly organized in my work, planning and decision-making.
+			</p>
+			<p>
+				My <a href="https://www.16personalities.com/profiles/f86eb82313cd6">personality test results</a>
+				indicate that I prioritize <span style="background: #33a474">thinking</span> over feeling,
+				focusing on objectivity, rationality, and efficiency.
+				This makes me well-suited for software development or data analysis roles.
+				In the fields where I am confident, I tend to be more <span style="background:#e4ae3a">intuitive</span>,
+				while in areas where I lack confidence, I am more observant.
+				Lastly, I am an <span style="background: #f25e62;">assertive</span> person, 
+				self-assured, even-tempered and resistant to stress. 
 			</p>
 		</div>
 		<img src="personality_result.PNG" alt="Personality Test Result"/>
